OXPL-435: texts updated, IE layout fixes, bug fix: opt in/out buttons visible when no paging, bug fix: user-entered floor price remembered after opt in, JS clean ups

--- a/plugins_repo/openXMarket/www/admin/plugins/oxMarket/css/ox.market.css
+++ b/plugins_repo/openXMarket/www/admin/plugins/oxMarket/css/ox.market.css
@@ -197,6 +197,7 @@ ul.column li.rejected {
   padding-top: 8px;
   padding-bottom: 8px;
   background: none;
+  vertical-align: middle;
 }
 
 .market-campaign-settings .tableWrapper .scroll {
@@ -337,6 +338,11 @@ ul.column li.rejected {
   line-height:16px;
   margin:0 6px 0 0;
   padding:3px;
+  *line-height: 12px;
+  
+  /** Fix extra button padding in IE7 */
+  *width: auto;
+  *overflow: visible;
 }
 
 .market-campaign-settings button.green-dot span {
@@ -348,12 +354,17 @@ ul.column li.rejected {
 }
 
 .market-campaign-settings button.left span {
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   line-height:13px;
-  padding-left:13px;
+  padding-left:13px;    
   position:relative;
   top: 0px;
-  left: -3px;
+  left: -1px;
+  *left: 1px;
+  
+  -background-repeat: repeat-x;
+  -background-position: -10px 1px;
+  -padding-left:11px;    
 }
 
 
